--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "worker": "node email-worker.js",
     "dev": "nodemon index.js"
   },
   "dependencies": {
